Resume: Work: fixing cards alignment

--- a/src/components/resume/Work.css
+++ b/src/components/resume/Work.css
@@ -68,6 +68,8 @@
 .work-work-one .div-two {
     /* border: solid yellow 1px; */
     width: 100%;
+    position: relative;
+    left: 5px;
 }
 
 .work-work-one h2 {
@@ -75,6 +77,7 @@
     font-size: 2rem;
     margin: 0 0 10px 0;
     font-weight: 600;
+    
 }
 
 
